# copaw-wechat

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  debug_copaw_setup.py  pyproject.toml  requirements.txt  setup.py
copaw_wechat/: __init__.py  config.py  crypto.py  utils.py
docs/: 开发文档.md
src/copaw_plugin_wechat/: __init__.py  config.py  handlers.py  plugin.py  wechat_client.py  wechat_msg_crypt.py
tests/: __init__.py  test_config.py  test_crypto.py
wecom/: __init__.py  channel.py  constants.py  utils.py
